@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.8 2002/09/04 00:52:59 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.9 2002/09/04 00:56:01 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1263,3 +1263,7 @@ usr.sbin/mtrace/mtrace.c			1.21-1.23 (via patch)
 usr.sbin/mrinfo/mrinfo.c			1.15 (via patch)
   fix an exploitable fd_set overflow in mrinfo(8).  drop root priv earlier.
   do not use generated printf format string.  from xs@kittenz.org
+
+usr.sbin/pppd/pppd/sys-bsd.c			1.39
+usr.sbin/pppd/pppd/tty.c			1.5
+  die if fd_set overruns.
